--- a/languages/play-audio-once-es_ES.po
+++ b/languages/play-audio-once-es_ES.po
@@ -1,15 +1,14 @@
-# Copyright (C) 2022 Thomas Zwirner
+# Copyright (C) 2023 Thomas Zwirner
 # This file is distributed under the GPL-2.0-or-later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Play Audio once 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/play-audio-"
-"once\n"
+"Project-Id-Version: Play Audio once @@VersionNumber@@\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/play-audio-once\n"
 "POT-Creation-Date: 2023-03-19T13:50:08+01:00\n"
-"PO-Revision-Date: 2023-03-19 13:50+0100\n"
+"PO-Revision-Date: 2023-03-19 13:51+0100\n"
 "Last-Translator: Thomas Zwirner <info@thomaszwirner.de>\n"
 "Language-Team: \n"
-"Language: de\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,15 +18,15 @@ msgstr ""
 
 #. Plugin Name of the plugin
 msgid "Play Audio once"
-msgstr "Audio nur einmal wiedergeben"
+msgstr "Reproducir audio una vez"
 
 #. Description of the plugin
 msgid ""
 "Adds an option to the audio block to prevent the file from being played "
 "multiple times."
 msgstr ""
-"Fügt dem Audioblock eine Option hinzu, die verhindert, dass die Datei "
-"mehrfach abgespielt wird."
+"Añade una opción al bloque de audio para evitar que el archivo se reproduzca "
+"varias veces."
 
 #. Author of the plugin
 msgid "Thomas Zwirner"
@@ -39,8 +38,8 @@ msgstr "https://www.thomaszwirner.de"
 
 #: attributes/index.js:103 attributes/index.js:91
 msgid "Advanced Audio Controls"
-msgstr "Erweiterte Audiosteuerung"
+msgstr "Controles de audio avanzados"
 
 #: attributes/index.js:105 attributes/index.js:94
 msgid "play only once per session"
-msgstr "nur einmal pro Sitzung spielen"
+msgstr "jugar sólo una vez por sesión"
