--- a/languages/play-audio-once.pot
+++ b/languages/play-audio-once.pot
@@ -1,17 +1,17 @@
-# Copyright (C) 2022 Thomas Zwirner
+# Copyright (C) 2023 Thomas Zwirner
 # This file is distributed under the GPL-2.0-or-later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Play Audio once 1.0.0\n"
+"Project-Id-Version: Play Audio once @@VersionNumber@@\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/play-audio-once\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-03-02T00:12:21+01:00\n"
+"POT-Creation-Date: 2023-03-19T13:50:08+01:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"X-Generator: WP-CLI 2.6.0\n"
+"X-Generator: WP-CLI 2.7.1\n"
 "X-Domain: play-audio-once\n"
 
 #. Plugin Name of the plugin
@@ -30,12 +30,12 @@ msgstr ""
 msgid "https://www.thomaszwirner.de"
 msgstr ""
 
-#: attributes/index.js:109
-#: src/audioOption.js:91
+#: attributes/index.js:103
 #: attributes/index.js:91
-msgid "play only once per session"
+msgid "Advanced Audio Controls"
 msgstr ""
 
-#: src/audioOption.js:88
-msgid "Advanced Audio Controls"
+#: attributes/index.js:105
+#: attributes/index.js:94
+msgid "play only once per session"
 msgstr ""
